--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ace": "^1.3.0",
     "axios": "^0.18.0",
     "clipboard": "^2.0.1",
+    "core-js": "^2.6.12",
     "element-ui": "^2.3.8",
     "jsoneditor": "^5.24.6",
     "multiparty": "^4.2.1",
